Final na sa wakas (12/04/17)

--- a/www/index.html
+++ b/www/index.html
@@ -12,15 +12,7 @@
     <script crossorigin type="text/javascript" src="js/babel.min.js"></script>
     <script type="text/jsx" src="js/process.js"></script>
     </head>
-    <body class="framework7-root bg1">
-        <div class="views">
-        <div class="view view-main">
-            <div class="pages">
-                <div class="page-content">
-        <div id="r"></div>
-                </div>
-            </div>
-        </div>
-    </div>        
+    <body>
+        <div id="r"></div>    
     </body>
 </html>
